# kubernetes-monitor

./: .commitlintrc.json  .dockerignore  .eslintrc.json  .gitignore  .gitleaksignore  .prettierignore  .snyk  .travis.yml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ubi8  Dockerfile.ubi9  LICENSE  Makefile  README.md  Tiltfile  add-ns.py  babel.config.js  catalog-info.yaml  config.default.json  config.dev.json  config.prod.json  config.secret.json  config.test.json  docker-entrypoint.sh  docker.js  egg-deployment.yaml  egg-permissions.yaml  index.yaml  jest-environment-fail-fast.ts  jest.config.js  jest.setup-after-env.js  newrelic.js  oci_changes.patch  package-lock.json  package.json  pr_body.md  registries.conf  requirements.txt  (+318 more)
.circleci/: README.md  config.yml  do-exclusively
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
k8smonitor/: config.json  config.py  kubernetes_wrapper.py  main.py
scripts/: approve-image.sh  build-image.sh  clean-all-monitor-objects.sh  create-cluster-service-version.sh  create-operator.sh  end_test.sh  gen-operator-bundle.sh  local-testing.sh  operator-from-template.sh  parse-operator-yaml.js  post-release-notes-preview.py  prep_test.sh  publish-gh-pages.sh  slack-notify-deploy.sh  slack-notify-failure.sh  slack-notify-pr.sh  slack-notify-push.sh  slack-notify-success-no-publish.sh  slack-notify-success-no-release.sh  test-openshift4.sh  test-yaml-creator.js  travis_after_success.sh
scripts/operator/tests/: pyproject.toml  test-operator-upgrade.py
snyk-monitor/: .helmignore  Chart.yaml  README.md  values.schema.json  (+1 more)
(+397 files in other folders)
